# hloo

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/actions/install-rust-toolchain/: action.yml
.github/workflows/: test.yml
benches/: all.rs  indexes.rs  internal.rs  search.rs  search256.rs  search64.rs
bit_permute/: Cargo.toml
bit_permute/examples/: dbg.rs
bit_permute/src/: bit_block.rs  lib.rs  permutations.rs
bit_permute_macro/: Cargo.toml
bit_permute_macro/benches/: permutations.rs
bit_permute_macro/examples/: codegen.rs
bit_permute_macro/src/: bit_op.rs  bits.rs  lib.rs  permutation.rs
bit_permute_macro/tests/: test.rs
data_gen/: Cargo.toml
data_gen/src/: lib.rs
examples/: search.rs
hloo_core/: Cargo.toml
hloo_core/examples/: dbg.rs
hloo_core/src/: bit_block.rs  lib.rs  permutations.rs
hloo_macros/: Cargo.toml
hloo_macros/benches/: permutations.rs
hloo_macros/examples/: codegen.rs
hloo_macros/src/: bit_op.rs  bits.rs  lib.rs  permutation.rs
hloo_macros/tests/: test.rs
src/: index.rs  lib.rs  lookup.rs  mmvec.rs  util.rs
src/index/: block_locator.rs  mem_index.rs  memmap_index.rs  memory_index.rs  mod.rs  stats.rs
src/lookup/: lookup_impl.rs  mod.rs
tests/: test.rs
