[package]
name = "hloo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bit_permute", "bit_permute_macro", "data_gen"]

[dependencies]
bit_permute = { path = "bit_permute" }
bit_permute_macro = { path = "bit_permute_macro" }
thiserror = "1"
memmap2 = { version = "0.7" }
tempfile = { version = "3" }

[dev-dependencies]
data_gen = { path = "data_gen" }

[dev-dependencies.criterion]
version = "0.5"
default-features = false
features = ["cargo_bench_support", "html_reports"]

[[bench]]
name = "search64"
harness = false

[[bench]]
name = "search256"
harness = false

[[bench]]
name = "indexes"
harness = false

[[bench]]
name = "internal"
harness = false
