[package]
name = "hloo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["hloo_core", "hloo_macros", "data_gen"]

[dependencies]
hloo_core = { path = "hloo_core" }
hloo_macros = { path = "hloo_macros" }
thiserror = "1"
memmap2 = { version = "0.7" }
fs4 = { version = "0.6", features = ["sync"] }
tempfile = { version = "3" }

[dev-dependencies]
data_gen = { path = "data_gen" }

[dev-dependencies.criterion]
version = "0.5"
default-features = false
features = ["cargo_bench_support", "html_reports"]

[[bench]]
name = "search64"
harness = false

[[bench]]
name = "search256"
harness = false

[[bench]]
name = "indexes"
harness = false

[[bench]]
name = "internal"
harness = false
