[package]
name = "hloo"
version.workspace = true
edition = "2024"

[workspace]
package.version = "0.1.0"
members = ["hloo_core", "hloo_macros", "data_gen"]

[dependencies]
hloo_core = { path = "hloo_core" }
hloo_macros = { path = "hloo_macros" }
thiserror = "2"
memmap2 = "0.9"
fs4 = "0.13"
tempfile = "3"

[dev-dependencies]
data_gen = { path = "data_gen" }

[dev-dependencies.criterion]
version = "0.5"
default-features = false
features = ["cargo_bench_support", "html_reports"]

[[example]]
name = "search"

[[bench]]
name = "search64"
harness = false

[[bench]]
name = "search256"
harness = false

[[bench]]
name = "indexes"
harness = false

[[bench]]
name = "internal"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true
