[package]
name = "hloo_macros"
version.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
hloo_core = { path = "../hloo_core" }
darling = "0.20"
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
rand = "0.8"

[dev-dependencies.criterion]
version = "0.5"
default-features = false
features = ["cargo_bench_support", "html_reports"]

[[bench]]
name = "permutations"
harness = false
